[package]
name = "concurrency_template_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
futures = "0.3"
chrono = "0.4"
tokio-stream = "0.1"

env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.4"

